--- a/android_app/gradle.properties
+++ b/android_app/gradle.properties
@@ -6,23 +6,39 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
+org.gradle.jvmargs=-XX:MaxHeapSize=2048m -Xmx2048m
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 # AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system and which are packaged with your app's APK
+# Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+# Kotlin code style for this project: "official" or "obsolete":
+kotlin.code.style=official
+
+##############################################################################
+org.gradle.daemon=true  // 开启线程守护，第一次编译时开线程，之后就不会再开了
+org.gradle.parallel=true  // 开启并行编译，相当于多条线程再走
+org.gradle.configureondemand=true   //启用新的孵化模式
+android.injected.testOnly=false
+PROP_APP_ABI=armeabi-v7a
+
+##
+##Execution failed for task ':app:transformClassesAndResourcesWithR8ForDeveloperDebug'.
+##Disables R8 for Android Library modules only.
+#android.enableR8.libraries = false
+##Disables R8 for all modules.
+#android.enableR8 = false
+#是否取消测试版的内存泄漏检测，并将debug的APK重命名移动到APK目录(改为true主页是打包给测试部门)
+debugNoLeakcanaryAndCopy2ApkDir=false
 
 APP_NAME=ProxyMe
 VERSION_NAME=1.0.0
-
-productKeyStore=../changeit.jks
-productKeyAlias=key0
-productKeyStorePassword=changeit
-productKeyAliasPassword=changeit
-
+productKeyStore=../com_ab.jks
+productKeyAlias=com_cc
+productKeyStorePassword=com_cc
+productKeyAliasPassword=com_cc
